fixed overflow

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+
+  box-sizing: border-box;
+}
+
+
 @font-face {
   font-family: 'HelveticaNeue';
   src:  url('fonts/HelveticaNeueBold.ttf') format('ttf');
